Fix styles for overflowing in NoteItem title. Change of isStarred value of note doesn't change updatedAt value.

--- a/src/renderer/styles/components/NotesViewer/_NoteItem.scss
+++ b/src/renderer/styles/components/NotesViewer/_NoteItem.scss
@@ -38,9 +38,14 @@
 .note-item__title {
   font-size: 1.8rem;
   font-weight: 600;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  min-width: 0;
+  white-space: nowrap;
 }
 
 .note-item__icon {
+  margin-left: $small-space;
   flex-shrink: 0;
   width: 2rem;
   height: 2rem;
